syntax = "proto3";
option java_multiple_files = true;
package de.dhbw.swe.runtime.ml.regression;

message SetupLCRequest {
  uint64 classifierId = 1;
  repeated double x = 2;
  repeated double y = 3;
}

message DeleteLCRequest {
  uint64 classifierId = 1;
}

message ErrorLCRequest {
  uint64 classifierId = 1;
}

message PredictLCRequest {
  uint64 classifierId = 1;
  double value = 2;
}

message SetupLCResponse {
  uint64 classifierId = 1;
  string message = 2;
  bool success = 3;
}

message DeleteLCResponse {
  uint64 classifierId = 1;
  string message = 2;
  bool success = 3;
}

message ErrorLCResponse {
  uint64 classifierId = 1;
  double error = 2;
  string message = 3;
  bool success = 4;
}

message PredictLCResponse {
  uint64 classifierId = 1;
  double value = 2;
  double prediction = 3;
  string message = 4;
  bool success = 5;
}

service LinearRegressionService {
  rpc setupLinearRegression(SetupLCRequest) returns (SetupLCResponse);
  rpc deleteLinearRegression(DeleteLCRequest) returns (DeleteLCResponse);
  rpc errorLinearRegression(ErrorLCRequest) returns (ErrorLCResponse);
  rpc predictLinearRegression(PredictLCRequest) returns (PredictLCResponse);
}